planner: stop building the catalyst map for patterns that have no catalyst
CI failed on the overproduction tie-break for allocating 1.20x the baseline on
sibling_conflict, while the same commit passed locally at 1.199x. The gate was
right and the local run was lucky: the threshold sits at the number, so a fraction
of a percent decided it.

Measuring the commit CI had already accepted shows it was at 1.171x, so most of
that was pre-existing rather than this change, and any edit at all was a coin
flip. The cause of the pre-existing part was mine from the round before: the
decaying-catalyst fix reconciles a catalyst's working stock against what the same
pattern consumes, and it built that reconciliation map on every expansion whether
or not the pattern had a catalyst in it. Building it only when there is one takes
the case to 1.104x, which is better than the commit CI accepted and leaves room
for the tie-break that started this.

The first attempt at that was wrong in a way the tests caught immediately: it
guarded the accumulation on a flag the same pass was still setting, so a pattern
declaring its catalyst first merged into a null map. The scan and the build are
separate now.

The gate's own comment claimed allocation per operation is byte-exact and does
not depend on the machine. It is not: identical code measured 21992 locally and
22064 in CI, because escape analysis scalarises different call sites depending on
how the JIT warmed up. The comment says so now, and says what follows from it —
a threshold this tight has to leave headroom, and a measurement that only just
passes is one that will fail on the next runner.

180 unit tests, required supported=60/60 confirmed defects=0, 10/10 GameTests,
benchmark gate passed at 1.10x.